# NextHime

./: .drone.yml  .fossa.yml  .gitignore  .gitmodules  CHANGELOG.md  README.md  alembic.ini  config.ini  drone.yml  pyproject.toml  requirements-debug.txt  requirements.txt  run.py
.github/workflows/: python-app.yml  semgrep.yml
NextHime/: __init__.py  main.py
NextHime/cogs/: basic.py  blog.py  eew.py  read.py  sinoalice.py  verify.py  warframe.py
NextHime/routers/v1/: __init__.py
NextHime/routers/v1/auth/: __init__.py  index.py
NextHime/routers/v1/discord_guild/: __init__.py  index.py
alembic/: env.py
src/: 3rdlisence.md
src/alembic/: env.py
src/assets/: logo.txt
src/assets/data/: sinoalice_weeq_quest.json
src/language/: message.en.yml  message.ja.yml
src/language/en/warframe/: mission_type.yml
src/language/ja/: auto_migrate.yml
src/language/ja/blog/: achievement.yml  archievement.yml
src/language/ja/eew/: system.yml
src/language/ja/system/: info.yml
src/language/japan/: blocklist.yml
src/language/japan/warframe/: mission_type.yml
src/modules/: Config.py  NextHimeTools.py  NextHimeUtils.py  __init__.py  auto_migrate.py  color.py  create_logger.py  eew.py  embed_manager.py  language_manager.py  migrate.py  translator.py  voice_generator.py  warframe_utils.py
src/modules/eew/: __init__.py  eew_api.py  eew_utils.py
src/modules/warframe/: exceptions.py  warframe_api.py  warframe_utils.py
src/sql/models/: WarframeFissure.py  basic.py  blocklist.py  blog.py  eew.py  guild.py  note.py  user.py
ssm/modules/: auto_migrate.py
